--- a/src/designs/Option1.css
+++ b/src/designs/Option1.css
@@ -104,6 +104,15 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    max-width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.opt1-projects-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 4rem;
 }
 
 .opt1-about-grid {
