--- a/src/designs/Option1.css
+++ b/src/designs/Option1.css
@@ -128,8 +128,12 @@
 }
 
 .opt1-about-image {
-    aspect-ratio: 3/4;
+    aspect-ratio: 1/1;
     background-color: #F0EEEB;
+    border-radius: 50%;
+    overflow: hidden;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .opt1-project-grid {
