--- a/src/designs/Option1.css
+++ b/src/designs/Option1.css
@@ -130,7 +130,10 @@
 .opt1-about-image {
     aspect-ratio: 1/1;
     background-color: #F0EEEB;
+    border-radius: 50%;
     overflow: hidden;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .opt1-project-grid {
